--- a/site/text.html
+++ b/site/text.html
@@ -16,6 +16,7 @@
     <nav id="header-nav" class="navbar navbar-default">
     <div class="container">
         <div class="navbar-header">
+        <h1>Food, LLC</h1>
         </div>
     </div>
     </nav>
