--- a/site/text.html
+++ b/site/text.html
@@ -18,12 +18,19 @@
         <div class="navbar-header">
         <h1>Food, LLC</h1>
         </div>
-    </div>
     </nav>
+
+    <div id="header2">
+        <h2>Our Menu</h2>
+    </div>
 </header>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src= "js/bootstrap.min.js"></script>
+
+<script id="__bs_script__">//<![CDATA[
+    document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.18.8'><\/script>".replace("HOST", location.hostname));
+//]]></script>
 
 
 </body>
