--- a/site/text.html
+++ b/site/text.html
@@ -15,8 +15,8 @@
 <header>
     <nav id="header-nav" class="navbar navbar-default">
     <div class="container">
-        <div class="navbar-header">
-        <h1>Food, LLC</h1>
+        <div class="navbar-brand">
+        <a href="index.html"><h1>Food, LLC</h1></a>
         </div>
     </nav>
 
@@ -31,4 +31,3 @@
 
 </body>
 </html>
-}
