--- a/site/text.html
+++ b/site/text.html
@@ -22,7 +22,26 @@
 
     <div id="header2">
         <h2>Our Menu</h2>
+
+        <button type="button" class="collapse navbar-collapse">
+            <ul id="nav-list" class="nav navbar-nav navbar-right">
+            <li class="visible-xs active">
+            <span>chicken</span>
+            </li>
+
+            <li class="visible-xs active">
+            <span>fish</span>
+            </li>
+
+            <li class="visible-xs active">
+            <span>beef</span>
+            </li>
+
+            </ul>
+        </button>
     </div>
+
+
 </header>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
