--- a/site/text.html
+++ b/site/text.html
@@ -17,13 +17,12 @@
     <div class="container">
         <div class="navbar-brand">
         <a href="index.html"><h1>Food, LLC</h1></a>
-        </div>
-    </nav>
+        </div> 
 
     <div id="header2">
-        <h2>Our Menu</h2>
+        <h2>Our Menu</h2></div>
 
-        <button type="button" class="collapse navbar-collapse">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
             <ul id="nav-list" class="nav navbar-nav navbar-right">
             <li class="visible-xs active">
             <span>chicken</span>
