--- a/site/text.html
+++ b/site/text.html
@@ -19,9 +19,6 @@
         <a href="index.html"><h1>Food, LLC</h1></a>
         </div> 
 
-    <div id="header2">
-        <h2>Our Menu</h2></div>
-
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
             <ul id="nav-list" class="nav navbar-nav navbar-right">
             <li class="visible-xs active">
@@ -38,7 +35,10 @@
 
             </ul>
         </button>
-    </div>
+    </div></nav>
+
+     <div id="header2">
+        <h2>Our Menu</h2></div>
 
 
 </header>
