--- a/site/text.html
+++ b/site/text.html
@@ -20,29 +20,16 @@
         </div> 
 
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
-            <ul id="nav-list" class="nav navbar-nav navbar-right">
-            <li class="visible-xs active">
-            <span>chicken</span>
-            </li>
-
-            <li class="visible-xs active">
-            <span>fish</span>
-            </li>
-
-            <li class="visible-xs active">
-            <span>beef</span>
-            </li>
-
-            </ul>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
         </button>
-    </div></nav>
+        </div></div></nav>
 
-     <div id="header2">
+         <div id="header2">
         <h2>Our Menu</h2></div>
 
-
-</header>
-
+ </header>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src= "js/bootstrap.min.js"></script>
 
