--- a/site/text.html
+++ b/site/text.html
@@ -20,11 +20,12 @@
         </div> 
 
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+        <span class="sr-only">Toggle Navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         </button>
-        </div></div></nav>
+       </div></nav>
 
          <div id="header2">
         <h2>Our Menu</h2></div>
