--- a/site/text.html
+++ b/site/text.html
@@ -22,8 +22,8 @@
 
       
 
-         <div id="header2">
-        <h2>Our Menu</h2></div>
+        <!--<div id="header2">
+        <h2>Our Menu</h2></div>-->
 
  </header>
 
