--- a/site/text.html
+++ b/site/text.html
@@ -16,13 +16,13 @@
     <nav id="header-nav" class="navbar navbar-default">
     <div class="container">
 
-        <div class="navbar-brand">
+        <!--<div class="navbar-brand">
         <a href="index.html"><h1>Food, LLC</h1></a>
         </div> 
 
       
 
-        <!--<div id="header2">
+        <div id="header2">
         <h2>Our Menu</h2></div>-->
 
  </header>
