--- a/site/text.html
+++ b/site/text.html
@@ -6,8 +6,8 @@
     <title>module 3 solution</title>
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
     
   </head>
 
@@ -15,6 +15,12 @@
 <header>
     <nav id="header-nav" class="navbar navbar-default">
     <div class="container">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        </button>
+       </div></nav>
 
         <!--<div class="navbar-brand">
         <a href="index.html"><h1>Food, LLC</h1></a>
@@ -26,10 +32,10 @@
         <h2>Our Menu</h2></div>-->
 
  </header>
-
+<script src="js/jquery-3.1.1.min.js"></script>
 <script src= "js/bootstrap.min.js"></script>
 <script src ="js/script.js"></script>
-<script src="js/jquery-2.1.4.min.js"></script>
+
 
 </body>
 </html>
