--- a/site/text.html
+++ b/site/text.html
@@ -32,10 +32,11 @@
         <h2>Our Menu</h2></div>-->
 
  </header>
-<script src="js/jquery-3.1.1.min.js"></script>
+
+
+<script   src="https://code.jquery.com/jquery-1.11.3.js"   integrity="sha256-IGWuzKD7mwVnNY01LtXxq3L84Tm/RJtNCYBfXZw3Je0="   crossorigin="anonymous"></script>
 <script src= "js/bootstrap.min.js"></script>
 <script src ="js/script.js"></script>
-
 
 </body>
 </html>
