--- a/site/text.html
+++ b/site/text.html
@@ -15,6 +15,10 @@
 <header>
     <nav id="header-nav" class="navbar navbar-default">
     <div class="container">
+    <div class="navbar-brand">
+    <a href="index.html"><h1>Food, LLC</h1></a>
+    </div> 
+
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -22,14 +26,8 @@
         </button>
        </div></nav>
 
-        <!--<div class="navbar-brand">
-        <a href="index.html"><h1>Food, LLC</h1></a>
-        </div> 
-
-      
-
-        <div id="header2">
-        <h2>Our Menu</h2></div>-->
+         <div id="header2">
+        <h2>Our Menu</h2></div>
 
  </header>
 
