--- a/site/text.html
+++ b/site/text.html
@@ -24,11 +24,24 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         </button>
-       </div></nav>
+        </div></nav>
 
          <div id="header2">
         <h2>Our Menu</h2></div>
 
+        <div class="container-fluid">
+        <div class="row">
+        <div id="item1" class="col-sm-12 col-lg-12 col-md-12">
+        <h1>Chicken</h1>
+        <p>sknkgngkgnkgnkgnkgnsekgnkegnkgnkgnkgnk</p>
+
+        <div id="item2" class="col-sm-12 col-lg-12 col-md-12">
+        <h1>Fish</h1>
+        <p>sknkgngkgnkgnkgnkgnsekgnkegnkgnkgnkgnk</p>
+
+        <div id="item3" class="col-sm-12 col-lg-12 col-md-12">
+        <h1>Chicken</h1>
+        <p>sknkgngkgnkgnkgnkgnsekgnkegnkgnkgnkgnk</p>
  </header>
 
 
