--- a/site/text.html
+++ b/site/text.html
@@ -31,17 +31,24 @@
 
         <div class="container-fluid">
         <div class="row">
+
         <div id="item1" class="col-sm-12 col-lg-12 col-md-12">
         <h1>Chicken</h1>
-        <p>sknkgngkgnkgnkgnkgnsekgnkegnkgnkgnkgnk</p>
+        <p>sknkgngkgnkgnkgnkgnsekgnkegnkgnkgnkgnk</p></div>
 
         <div id="item2" class="col-sm-12 col-lg-12 col-md-12">
         <h1>Fish</h1>
         <p>sknkgngkgnkgnkgnkgnsekgnkegnkgnkgnkgnk</p>
+        </div>
 
         <div id="item3" class="col-sm-12 col-lg-12 col-md-12">
         <h1>Chicken</h1>
         <p>sknkgngkgnkgnkgnkgnsekgnkegnkgnkgnkgnk</p>
+        </div>
+
+        </div></div>
+
+
  </header>
 
 
