--- a/site/text.html
+++ b/site/text.html
@@ -16,7 +16,7 @@
     <nav id="header-nav" class="navbar navbar-default">
     <div class="container">
     <div class="navbar-brand">
-    <a href="index.html"><h1>Food, LLC</h1></a>
+    <a href="index.html" id="header1"><h1>Food, LLC</h1></a>
     </div> 
 
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
@@ -26,22 +26,22 @@
         </button>
         </div></nav>
 
-         <div id="header2">
+         <div class="text-center">
         <h2>Our Menu</h2></div>
 
         <div class="container-fluid">
         <div class="row">
 
-        <div id="item1" class="col-sm-12 col-lg-12 col-md-12">
+        <div id="item1" class="col-sm-12 col-md-12 col-xs-12">
         <h1>Chicken</h1>
         <p>sknkgngkgnkgnkgnkgnsekgnkegnkgnkgnkgnk</p></div>
 
-        <div id="item2" class="col-sm-12 col-lg-12 col-md-12">
+        <div id="item2" class="col-sm-12 col-xs-12 col-md-12">
         <h1>Fish</h1>
         <p>sknkgngkgnkgnkgnkgnsekgnkegnkgnkgnkgnk</p>
         </div>
 
-        <div id="item3" class="col-sm-12 col-lg-12 col-md-12">
+        <div id="item3" class="col-sm-12 col-xs-12 col-md-12">
         <h1>Chicken</h1>
         <p>sknkgngkgnkgnkgnkgnsekgnkegnkgnkgnkgnk</p>
         </div>
