--- a/site/text.html
+++ b/site/text.html
@@ -32,16 +32,16 @@
         <div class="container-fluid">
         <div class="row">
 
-        <div id="item1" class="col-sm-12 col-md-12 col-xs-12">
+        <div id="item1" class="col-sm-12 col-md-12 col-xs-12" class="text-center">
         <h1>Chicken</h1>
         <p>sknkgngkgnkgnkgnkgnsekgnkegnkgnkgnkgnk</p></div>
 
-        <div id="item2" class="col-sm-12 col-xs-12 col-md-12">
+        <div id="item2" class="col-sm-12 col-xs-12 col-md-12" class="text-center">
         <h1>Fish</h1>
         <p>sknkgngkgnkgnkgnkgnsekgnkegnkgnkgnkgnk</p>
         </div>
 
-        <div id="item3" class="col-sm-12 col-xs-12 col-md-12">
+        <div id="item3" class="col-sm-12 col-xs-12 col-md-12" class="text-center">
         <h1>Chicken</h1>
         <p>sknkgngkgnkgnkgnkgnsekgnkegnkgnkgnkgnk</p>
         </div>
