--- a/site/text.html
+++ b/site/text.html
@@ -19,7 +19,7 @@
     <a href="index.html" id="header1"><h1>Food, LLC</h1></a>
     </div> 
 
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+      <button type="button" class="navbar-toggle collapsed" class="visible-xs" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -32,16 +32,16 @@
         <div class="container-fluid">
         <div class="row">
 
-        <div id="item1" class="col-sm-12 col-md-12 col-xs-12" class="text-center">
+        <div id="item1" class="col-sm-12 col-md-12 col-xs-12">
         <h1>Chicken</h1>
         <p>sknkgngkgnkgnkgnkgnsekgnkegnkgnkgnkgnk</p></div>
 
-        <div id="item2" class="col-sm-12 col-xs-12 col-md-12" class="text-center">
+        <div id="item2" class="col-sm-12 col-xs-12 col-md-12">
         <h1>Fish</h1>
         <p>sknkgngkgnkgnkgnkgnsekgnkegnkgnkgnkgnk</p>
         </div>
 
-        <div id="item3" class="col-sm-12 col-xs-12 col-md-12" class="text-center">
+        <div id="item3" class="col-sm-12 col-xs-12 col-md-12">
         <h1>Chicken</h1>
         <p>sknkgngkgnkgnkgnkgnsekgnkegnkgnkgnkgnk</p>
         </div>
