--- a/site/text.html
+++ b/site/text.html
@@ -24,6 +24,22 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         </button>
+
+        <div id="collapsable-nav" class="collapse navbar-collapse">
+        <ul id="nav-list" class="nav navbar-nav navbar-right">
+        <li>
+            <br class="hidden-xs"><span>chicken</span>
+        </li>
+            
+         <li>
+         <br class="hidden-xs"><span>fish</span>
+        </li>
+
+        <li>
+         <br class="hidden-xs"><span>beef</span>
+        </li> </ul></div>
+
+        </div>
         </div></nav>
 
          <div class="text-center">
@@ -34,7 +50,15 @@
 
         <div id="item1" class="col-sm-12 col-md-12 col-xs-12">
         <h1>Chicken</h1>
-        <p>sknkgngkgnkgnkgnkgnsekgnkegnkgnkgnkgnk</p></div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vehicula risus ipsum, eu ornare nulla vehicula non. Duis at odio urna. Curabitur pharetra enim et fringilla eleifend. Vivamus mattis condimentum mollis. In hac habitasse platea dictumst. Pellentesque id leo et odio accumsan tincidunt. Proin tristique odio metus, a convallis lacus tincidunt mollis. In pulvinar dui finibus condimentum ultricies. Cras laoreet, neque in pellentesque molestie, erat dui maximus leo, at efficitur lorem nulla id purus. Quisque vulputate luctus urna, id ornare mi malesuada in. In ornare semper mi in ultrices. Donec ut mi sed enim condimentum tincidunt mollis a ligula. Aliquam erat volutpat. Ut sodales consectetur erat, in imperdiet orci vehicula ut.
+
+        Curabitur nibh orci, porta in molestie sit amet, tempor non dui. Sed egestas a tellus ut blandit. Proin ullamcorper nisi ultrices velit volutpat, at fringilla orci euismod. Quisque vulputate, tellus vitae ornare venenatis, massa quam auctor massa, a suscipit tortor arcu non nunc. Ut vel lacus sodales, interdum diam a, aliquet tellus. Nullam elementum venenatis tortor, sit amet blandit eros convallis eget. Suspendisse eu nibh nec nunc fringilla laoreet in eu turpis. In vehicula turpis tortor, dapibus lobortis mauris pulvinar non. Sed posuere enim vitae massa volutpat facilisis.
+
+        Nulla leo nulla, mollis ut pellentesque eu, pellentesque viverra orci. Nam eu porttitor felis. Ut sit amet metus sapien. Quisque eget ante ac ligula tristique efficitur. Suspendisse non odio pharetra, auctor ante eu, mollis enim. Cras consequat ultrices ornare. Etiam ultrices luctus imperdiet. Morbi varius arcu nisi, et dignissim lacus sagittis ac.
+
+        Donec sit amet tellus vitae neque egestas aliquam vel at ante. Nulla gravida iaculis hendrerit. Donec pulvinar est lacus, a mattis metus maximus in. Sed ut dapibus nunc. Mauris aliquam condimentum risus, quis mattis metus hendrerit quis. Mauris lobortis erat felis, vitae fermentum lorem congue vitae. Sed rutrum nisi quis massa iaculis, ut consequat purus pulvinar. Cras tempus sed est a feugiat. Sed tincidunt scelerisque diam, vitae suscipit purus vestibulum vitae. Vestibulum lacinia porta odio nec imperdiet. Vestibulum at consequat ipsum. Quisque dictum diam vitae tortor efficitur luctus. Vivamus dui tellus, tristique ac imperdiet ut, hendrerit eget purus. Nam commodo, enim ac bibendum suscipit, risus quam fringilla elit, ut interdum massa tortor non lectus. In consequat condimentum justo, a hendrerit tortor aliquet quis. Fusce at sodales nulla.
+
+        Integer luctus tempor ultricies. Aenean eleifend mi nec lorem condimentum posuere. Nunc orci lacus, viverra non est sit amet, eleifend hendrerit lacus. In sit amet elementum leo. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus faucibus consectetur massa, sed laoreet augue molestie hendrerit. Curabitur sed purus at nulla fringilla aliquam quis eget neque.</p></div>
 
         <div id="item2" class="col-sm-12 col-xs-12 col-md-12">
         <h1>Fish</h1>
