--- a/site/text.html
+++ b/site/text.html
@@ -23,25 +23,24 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        </button>
+        </button></div></nav>
 
         <div id="collapsable-nav" class="collapse navbar-collapse">
         <ul id="nav-list" class="nav navbar-nav navbar-right">
         <li>
-            <br class="hidden-xs"><span>chicken</span>
+            <br class="visible-xs"><span>chicken</span>
         </li>
             
          <li>
-         <br class="hidden-xs"><span>fish</span>
+         <br class="visible-xs"><span>fish</span>
         </li>
 
         <li>
-         <br class="hidden-xs"><span>beef</span>
+         <br class="visible-xs"><span>beef</span>
         </li> </ul></div>
 
         </div>
-        </div></nav>
-
+       
          <div class="text-center">
         <h2>Our Menu</h2></div>
 
