--- a/site/text.html
+++ b/site/text.html
@@ -28,15 +28,15 @@
         <div id="collapsable-nav" class="collapse navbar-collapse">
         <ul id="nav-list" class="nav navbar-nav navbar-right">
         <li>
-            <br class="visible-xs"><span>chicken</span>
+            <br class="visible-xs"><div>chicken</div>
         </li>
             
          <li>
-         <br class="visible-xs"><span>fish</span>
+         <br class="visible-xs"><div>fish</div>
         </li>
 
         <li>
-         <br class="visible-xs"><span>beef</span>
+         <br class="visible-xs"><div>beef</div>
         </li> </ul></div>
 
         </div>
