--- a/site/text.html
+++ b/site/text.html
@@ -19,7 +19,7 @@
     <a href="index.html" id="header1"><h1>Food, LLC</h1></a>
     </div> 
 
-      <button type="button" class="navbar-toggle collapsed" class="visible-xs" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+      <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -28,15 +28,15 @@
         <div id="collapsable-nav" class="collapse navbar-collapse">
         <ul id="nav-list" class="nav navbar-nav navbar-right">
         <li>
-            <br class="visible-xs"><div>chicken</div>
+            <br class="hidden-xs"><div>chicken</div>
         </li>
             
          <li>
-         <br class="visible-xs"><div>fish</div>
+         <br class="hidden-xs text-center"><div>fish</div>
         </li>
 
         <li>
-         <br class="visible-xs"><div>beef</div>
+         <br class="hidden-xs text-center"><div>beef</div>
         </li> </ul></div>
 
         </div>
