--- a/site/text.html
+++ b/site/text.html
@@ -28,15 +28,15 @@
         <div id="collapsable-nav" class="collapse navbar-collapse">
         <ul id="nav-list" class="nav navbar-nav navbar-right">
         <li>
-           <div> chicken <br class="hidden-xs text-center"></div>
+           <div> Chicken <br class="hidden-xs text-center"></div>
         </li>
             
          <li>
-         <div> fish <br class="hidden-xs text-center"></div>
+         <div> Fish <br class="hidden-xs text-center"></div>
         </li>
 
         <li>
-         <div>beef<br class="hidden-xs text-center"></div>
+         <div>Beef<br class="hidden-xs text-center"></div>
         </li> </ul></div>
 
         </div>
