--- a/site/text.html
+++ b/site/text.html
@@ -37,7 +37,7 @@
         </li> </ul></div>
         </div>
        
-         <div class="text-center">
+         <div id="header2" class="text-center">
         <h2>Our Menu</h2></div>
 
         <div class="container-fluid">
