--- a/site/text.html
+++ b/site/text.html
@@ -61,7 +61,7 @@
         </div>
 
         <div id="item3" class="col-sm-12 col-xs-12 col-md-12">
-        <h1>Chicken</h1>
+        <h1>Beef</h1>
         <p>sknkgngkgnkgnkgnkgnsekgnkegnkgnkgnkgnk</p>
         </div>
 
