--- a/site/text.html
+++ b/site/text.html
@@ -29,12 +29,12 @@
         <div id="collapsable-nav" class="collapse navbar-collapse">
         <ul id="nav-list" class="nav navbar-nav navbar-right">
        <li class="visible-xs active">
-
-          <div id="chick"> Chicken <br class="hidden-xs"></div>
+          <a href="text.html">
+          <div> Chicken <br class="hidden-xs"></div>
           <div> Fish <br class="hidden-xs"></div>
           <div>Beef<br class="hidden-xs"></div>
 
-        </li> </ul></div>
+        </a></li> </ul></div>
         </div>
        
          <div id="header2" class="text-center">
