--- a/site/text.html
+++ b/site/text.html
@@ -30,7 +30,7 @@
         <ul id="nav-list" class="nav navbar-nav navbar-right">
        <li class="visible-xs active">
         
-          <div> Chicken <br class="hidden-xs"></div>
+          <div id="Chicken"> Chicken <br class="hidden-xs"></div>
           <div> Fish <br class="hidden-xs"></div>
           <div>Beef<br class="hidden-xs"></div>
 
