--- a/site/text.html
+++ b/site/text.html
@@ -57,7 +57,7 @@
 
         <div id="item2" class="col-sm-12 col-xs-12 col-md-12">
         <h1>Fish</h1>
-        <p>sknkgngkgnkgnkgnkgnsekgnkegnkgnkgnkgnk</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vehicula risus ipsum, eu ornare nulla vehicula non. Duis at odio urna. Curabitur pharetra enim et fringilla eleifend. Vivamus mattis condimentum mollis. In hac habitasse platea dictumst. Pellentesque id leo et odio accumsan tincidunt. Proin tristique odio metus, a convallis lacus tincidunt mollis. In pulvinar dui finibus condimentum ultricies. Cras laoreet, neque in pellentesque molestie, erat dui maximus leo, at efficitur lorem nulla id purus. Quisque vulputate luctus urna, id ornare mi malesuada in. In ornare semper mi in ultrices. Donec ut mi sed enim condimentum tincidunt mollis a ligula. Aliquam erat volutpat. Ut sodales consectetur erat, in imperdiet orci vehicula ut.</p>
         </div>
 
         <div id="item3" class="col-sm-12 col-xs-12 col-md-12">
